[metadata]

name = knnpe
version = 0.1.1
author = L. G. J. M. Voltarelli, A. A. B. Pessa, L. Zunino, R. S. Zola, E. K. Lenzi, M. Perc, H. V. Ribeiro
author_email = hvr@uem.dfi.br
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = A Python package for characterizing unstructured data with the nearest neighbor permutation entropy
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8

[options]
python_requires = >=3.6
